[gd_scene load_steps=4 format=3 uid="uid://b362ikkvilv7h"]

[ext_resource type="Script" uid="uid://cyl0d4wb2my3" path="res://characters/enemies/enemy.gd" id="1_uir6y"]
[ext_resource type="Shader" uid="uid://btgap2n4ro8ye" path="res://views/damage_taken.tres" id="2_utecw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1jft5"]
resource_local_to_scene = true
shader = ExtResource("2_utecw")
shader_parameter/DamageTaken = null

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_uir6y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_1jft5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DamageTickTimer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="NavTimer" type="Timer" parent="."]

[node name="DamageIndicationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="waypoint_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_waypoint_reached"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="DamageIndicationTimer" to="." method="_on_damage_indication_timer_timeout"]
